objects/ctu__CTU_Mass_Clone__c.object
<CustomObject>
    <fields>
        <fullName>ctu__New_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CTU_Mass_Clones1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ctu__Original_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CTU_Mass_Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ctu__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ctu__Remove_Original_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Original User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ctu__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permission Set Assignment</fullName>
                </value>
                <value>
                    <fullName>Queue Membership</fullName>
                </value>
                <value>
                    <fullName>Public Group Membership</fullName>
                </value>
                <value>
                    <fullName>Permission Set License Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTU Mass Clone</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>CTU Mass Clone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTU Mass Clones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>